--- a/AiProductSolution.html
+++ b/AiProductSolution.html
@@ -73,15 +73,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -233,8 +233,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-            <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-            <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+            <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+            <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
             <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
           </ul>
@@ -902,7 +902,7 @@
                             <span class="navhover"></span>
                         </li>
                         <li class="mb-1"><a href="about.html"
-                                class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+                                class="text-white fw-lighter text-decoration-none">About Us</a></li>
                         <li class="mb-1"><a href="portfolio.html"
                                 class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
                         <li class="mb-1"><a href="AiProductSolution.html"
