--- a/GrcSolution.html
+++ b/GrcSolution.html
@@ -74,15 +74,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -115,7 +115,7 @@
 
         <div class="container d-flex flex-lg-row  align-items-center flex-column">
             <div class="col-lg-4">
-                <h2 class="text-white display-5 fw-bold">GRC Solutions
+                <h2 class="text-white display-5 fw-bold">GRC Services
             </div>
             <div class="col-lg-3 d-flex flex-row align-items-end">
               
@@ -123,7 +123,7 @@
 
             <div class="col-lg-5 d-flex flex-row align-items-end mt-lg-5 pt-lg-5 mt-4 text-end text-white">
                 <h5>
-                    GRC Solutions specializes in Governance, Risk, and Compliance services, offering innovative tools and expertise to help businesses navigate regulatory challenges and achieve operational excellence.
+                    GRC Services specializes in Governance, Risk, and Compliance services, offering innovative tools and expertise to help businesses navigate regulatory challenges and achieve operational excellence.
                 </h5>
             </div>
         </div>
@@ -232,8 +232,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-            <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-            <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+            <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+            <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
             <li><a class="dropdown-item" href="DigitalMarketing.html">Digital Marketing</a></li>
           </ul>
@@ -286,7 +286,7 @@
 
         </div>
         <div class="d-flex  justify-content-end col-lg-4 mt-5 mt-lg-0">
-            <h5 class="text-end">AI-powered GRC Solutions streamline compliance, predict risks, and automate workflows to enhance efficiency and accuracy
+            <h5 class="text-end">AI-powered GRC Services streamline compliance, predict risks, and automate workflows to enhance efficiency and accuracy
             </h5>               
         </div>
     </div>
@@ -785,7 +785,7 @@
           <ul class="list-unstyled fs-6">
             <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>    
               <span class="navhover"></span></li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
             <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
