--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -75,15 +75,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -235,8 +235,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
           </li>
@@ -286,7 +286,7 @@
 
         </div>
         <div class="d-flex  justify-content-end col-lg-4 mt-5 mt-lg-0">
-            <h5 class="text-end">Harnessing AI to Drive Smarter Web & App Development and Seamless Automation
+            <h5 class="text-end">Harnessing AI to Drive Smarter AI Driven  Web & App Development and Seamless Automation
             </h5>
         </div>
     </div>
@@ -366,8 +366,8 @@
                 Development Solutions
             </p>
             <p class="text-white col-lg-5 ms-auto fs-6 fw-lighter text-end">
-                AI-Driven Web & App Development Solutions
-                At AI-Driven Web & App Development Solutions, we specialize in creating secure and intelligent software
+                AI-Driven AI Driven  Web & App Development Solutions
+                At AI-Driven AI Driven  Web & App Development Solutions, we specialize in creating secure and intelligent software
                 tailored to your business needs. Our solutions are designed to streamline operations.
             </p>
         </div>
@@ -390,7 +390,7 @@
 
                     <div>
                         <p class="pt-3 col-lg-12 fs-6 fw-normal">
-                            Our Custom Web & App Development solutions leverage AI-powered technologies to capture container and vehicle data with exceptional speed and precision. We design web and mobile applications that seamlessly integrate with Terminal Operating System (TOS) applications.
+                            Our Custom AI Driven  Web & App Development solutions leverage AI-powered technologies to capture container and vehicle data with exceptional speed and precision. We design web and mobile applications that seamlessly integrate with Terminal Operating System (TOS) applications.
                         </p>
                     </div>
                     <div class="col-12 mb-3">
@@ -446,7 +446,7 @@
 
                     <div>
                         <p class="pt-3 col-lg-12 fs-6 fw-normal">
-                            Our Custom Web & App Development solutions leverage AI-powered technologies to capture container and vehicle data with exceptional speed and precision. We design web and mobile applications that seamlessly integrate with Terminal Operating System (TOS) applications.
+                            Our Custom AI Driven  Web & App Development solutions leverage AI-powered technologies to capture container and vehicle data with exceptional speed and precision. We design web and mobile applications that seamlessly integrate with Terminal Operating System (TOS) applications.
 
                         </p>
                     </div>
@@ -834,7 +834,7 @@
                             <span class="navhover"></span>
                         </li>
                         <li class="mb-1"><a href="about.html"
-                                class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+                                class="text-white fw-lighter text-decoration-none">About Us</a></li>
                         <li class="mb-1"><a href="portfolio.html"
                                 class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
                         <li class="mb-1"><a href="AiProductSolution.html"
