--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>About-Us | Intelligent & Cyber Secure Solutions</title>
+  <title>About Us | Intelligent & Cyber Secure Solutions</title>
 
 </head>
 
@@ -80,15 +80,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -123,8 +123,8 @@
   <!-- MAIN SUB DIV START -->
   <div class="d-flex flex-column justify-content-center align-items-center">
   <div class="col-12 text-white ">
-    <h2 class=" display-3 text-center">About-Us</h2>
-    <h5 class="text-center">Home - About-Us</h5>
+    <h2 class=" display-3 text-center">About Us</h2>
+    <h5 class="text-center">Home - About Us</h5>
   </div>
   </div>
   
@@ -228,8 +228,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
           </li>
@@ -287,7 +287,7 @@
   <!-- Who We Are start -->
   <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
     <div class="container d-flex flex-lg-row flex-column py-5">
-      <p class="pe-5 fs-4 text-white col-lg-5">About-Us </p>
+      <p class="pe-5 fs-4 text-white col-lg-5">About Us </p>
       <h2 class="text-white col-lg-7 fs-6 text-end">
 
         We are highly passionate team of consultants that comprises of technologist, researchers 
@@ -395,7 +395,7 @@ You are welcome anytime to contact us through the web form on the provided link
           <ul class="list-unstyled fs-6">
             <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>    
               <span class="navhover"></span></li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
             <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
