--- a/buoyspot.html
+++ b/buoyspot.html
@@ -78,15 +78,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -229,8 +229,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
           </li>
@@ -474,7 +474,7 @@
             <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>
               <span class="navhover"></span>
             </li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a>
             </li>
             <li class="mb-1"><a href="AiProductSolution.html"
