--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -275,8 +275,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
             </ul>
           </li>
@@ -462,7 +462,7 @@
         </div>
         <div class="col-10 ms-2 py-4">
 
-          <h2 class="d-flex flex-row align-items-center ">GRC Solutions</h2>
+          <h2 class="d-flex flex-row align-items-center ">GRC Services</h2>
           <p class="col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6">We are offering GRC (Governance, Risk, and Compliance) services
             that makes you secured and complainced. Our top notch services, like ISO 27001 (Information Security Management System), ISO 22301 BCM (Business
             Continuity Management), ISO 31000 RMS (Risk Management) etc. implementations are streamlined your businesses
@@ -492,7 +492,7 @@
         </div>
         <div class="col-10 ms-2 py-4">
 
-          <h2 class="d-flex flex-row align-items-center ">AI Driven Web & App Development</h2>
+          <h2 class="d-flex flex-row align-items-center ">AI Driven AI Driven  Web & App Development</h2>
           <p class=" col-lg-11 col-12 py-3  paraa-1 fw-normal fs-6 ">We have senior team of developers and architects that can enable
             your websites through cutting-edge AI
             enabled technlogies that makes your businesses interactive on real-time basis and convert your leads into
@@ -527,7 +527,7 @@
   <!-- Who We Are start -->
   <div class="container-fluid mt-5 py-5 who d-flex flex-column justify-content-center align-items-center">
     <div class="container d-flex flex-lg-row flex-column py-5">
-      <p class="pe-5 fs-4 text-white col-lg-5">About-Us </p>
+      <p class="pe-5 fs-4 text-white col-lg-5">About Us </p>
       <h2 class="text-white col-lg-7 fs-6 text-end">
 
         We are highly passionate team of consultants that comprises of technologist, researchers 
@@ -683,8 +683,8 @@ You are welcome anytime to contact us through the web form on the provided link
             <select class="form-select" id="queryTopic" aria-label="Default select example">
               <option selected>Select Queary bTopic</option>
               <option value="AI Products & Solutions">AI Products & Solutions</option>
-              <option value="GRC Solutions">GRC Solutions</option>
-              <option value="Web & App Development">Web & App Development</option>
+              <option value="GRC Services">GRC Services</option>
+              <option value="AI Driven  Web & App Development">AI Driven  Web & App Development</option>
 
 
             </select>
@@ -748,7 +748,7 @@ You are welcome anytime to contact us through the web form on the provided link
             <li class="mb-1 "><a href="index.html" class="text-white1 fw-lighter text-decoration-none ">Home</a>
               <span class="navhover"></span>
             </li>
-            <li class="mb-1"><a href="about.html" class="text-white1 fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white1 fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white1 fw-lighter text-decoration-none">Portfolio</a>
             </li>
             <li class="mb-1"><a href="AiProductSolution.html"
