--- a/contact.html
+++ b/contact.html
@@ -80,15 +80,15 @@
 
 
                   </a></li>
-                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+                <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+                <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
 
               </ul>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="about.html" aria-expanded="false">
-                About-Us
+                About Us
               </a>
               <span class="navhover"></span>
 
@@ -230,8 +230,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
           </li>
@@ -354,8 +354,8 @@
             <select class="form-select" id="queryTopic" aria-label="Default select example">
               <option selected>Select Queary bTopic</option>
               <option value="AI Products & Solutions">AI Products & Solutions</option>
-              <option value="GRC Solutions">GRC Solutions</option>
-              <option value="Web & App Development">Web & App Development</option>
+              <option value="GRC Services">GRC Services</option>
+              <option value="AI Driven  Web & App Development">AI Driven  Web & App Development</option>
             
 
             </select>
@@ -416,7 +416,7 @@
           <ul class="list-unstyled fs-6">
             <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>    
               <span class="navhover"></span></li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
             <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
