--- a/schedulemeeting.html
+++ b/schedulemeeting.html
@@ -69,8 +69,8 @@
             <span class="navhover"></span>
             <ul class="dropdown-menu mx-auto">
               <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution</a></li>
-              <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item nav-link" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item nav-link" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
               <li><a class="dropdown-item nav-link" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
               <li><a class="dropdown-item nav-link" href="DigitalMarketing.html">
                 Digital Marketing</a></li>
@@ -79,7 +79,7 @@
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="about.html"  aria-expanded="false">
-             About-Us
+             About Us
             </a>
             <span class="navhover"></span>
             <!-- <ul class="dropdown-menu mx-auto">
@@ -214,8 +214,8 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
-              <li><a class="dropdown-item" href="GrcSolution.html">GRC Solutions</a></li>
-              <li><a class="dropdown-item" href="Web-AppDevelopment.html">Web & App Development</a></li>
+              <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
+              <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
             </ul>
           </li>
@@ -292,7 +292,7 @@
           <ul class="list-unstyled fs-6">
             <li class="mb-1 "><a href="index.html" class="text-white fw-lighter text-decoration-none ">Home</a>    
               <span class="navhover"></span></li>
-            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About-Us</a></li>
+            <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
             <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
