--- a/Web-AppDevelopment.html
+++ b/Web-AppDevelopment.html
@@ -70,7 +70,7 @@
               </a>
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
 
 
 
@@ -234,7 +234,7 @@
               Service
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
               <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
@@ -837,7 +837,7 @@
                                 class="text-white fw-lighter text-decoration-none">About Us</a></li>
                         <li class="mb-1"><a href="portfolio.html"
                                 class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
-                        <li class="mb-1"><a href="AiProductSolution.html"
+                        <li class="mb-1"><a href="Ai-Product-Solution.html"
                                 class="text-white fw-lighter text-decoration-none">Service</a></li>
                         <li class="mb-1"><a href="contact.html"
                                 class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
