--- a/buoyspot.html
+++ b/buoyspot.html
@@ -73,7 +73,7 @@
               </a>
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
 
 
 
@@ -228,7 +228,7 @@
               Service
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
               <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
@@ -441,17 +441,51 @@
   </div>
   <!-- FORM -->
   <!-- OUR PARTNER START-->
-  <div class="container roun my-5 ">
-    <h6>Our Major Product</h6>
-    <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
+  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+    <div class="d-flex flex-row justify-content-center flex-column">
+  <h4 class="text-white float-start">Our Major Product</h4>
+  <marquee width="100%" direction="left" class="rounded-3 p-3 bg-white container mx-auto"  scrollamount="10" >
+    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
+    <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+      <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
+    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safeacres.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safemalls.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safeoffice.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+  
+    <!-- 00 -->
 
-      <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
-
-      <img src="Assets/images/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
-    </marquee>
-    <h6 class="float-end mt-3">Almost 20+ Partner we have</h6>
+  </marquee>
+  <div class="col-12">
+  <h4 class="float-lg-end mt-3 text-white">Almost 20+ Product we have</h4>
+</div>
+</div>
+    
   </div>
 
   <!-- OUR PARTNER END-->
@@ -477,7 +511,7 @@
             <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a>
             </li>
-            <li class="mb-1"><a href="AiProductSolution.html"
+            <li class="mb-1"><a href="Ai-Product-Solution.html"
                 class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a>
             </li>
