--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
 
 
 
@@ -148,7 +148,7 @@
             <button class="banner-btn1  ">
               <span class="banner-btn  ">Explore Our Services</span>
               <span class="banner-btn-hover ">
-                <a href="AiProductSolution.html"><i class="fa-solid fa-paper-plane col-org"></i></a>
+                <a href="Ai-Product-Solution.html"><i class="fa-solid fa-paper-plane col-org"></i></a>
               </span>
             </button>
 
@@ -274,7 +274,7 @@
               Service
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
               <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
 
@@ -440,7 +440,7 @@
           <div class="mx-auto col-12 d-flex flex-row  align-items-center">
             <button class="mx-1 col-5 set-btn">More-Info
               <span class="set-btn-hover d-flex flex-row align-items-center justify-content-center">
-                <a href="AiProductSolution.html" class="col-12">
+                <a href="Ai-Product-Solution.html" class="col-12">
 
                   <i class="fa-solid fa-calendar tex">
 
@@ -714,17 +714,51 @@ You are welcome anytime to contact us through the web form on the provided link
   <!-- CONTACT-US -->
 
   <!-- OUR PARTNER START-->
-  <div class="container roun my-5 ">
-    <h6>Our Major Product</h6>
-    <marquee width="100%" direction="left" class="py-5" height="100px" scrollamount="10">
+  <div class="container-fluid roun my-5 p-3  bg d-flex flex-row justify-content-center align-items-center">
+    <div class="d-flex flex-row justify-content-center flex-column">
+  <h4 class="text-white float-start">Our Major Product</h4>
+  <marquee width="100%" direction="left" class="rounded-3 col-12 p-3 bg-white container mx-auto"  scrollamount="10" >
+    <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
+    <img src="Assets/images/Products-images/buoyspot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+      <img src="Assets/images/Products-images/automan.png" class="img-fluid  mx-4  col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/buoylight.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5 " alt="">
+    <img src="Assets/images/Products-images/callmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/carmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/facematics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/inteliOCR.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/iport.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mallmatics-02.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mallmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/medbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/meddroid.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/mediatalks.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/planetsafe.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/planetscan.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/posmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/predicto.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailmatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/retailatics.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safeacres.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safebuildings.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safemalls.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/safeoffice.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/talkatron.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+    <img src="Assets/images/Products-images/tmsbot.png" class="img-fluid mx-4 col-lg-3 col-md-4 col-5" alt="">
+  
+    <!-- 00 -->
 
-      <img src="Assets/images/Partner-Image/partner-01.png" class="img-fluid mx-5 px-5" alt="">
-
-      <img src="Assets/images/Partner-Image/partner-02.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/images/Partner-Image/partner-03.png" class="img-fluid mx-5 px-5" alt="">
-      <img src="Assets/images/Partner-Image/partner-04.png" class="img-fluid mx-5 px-5" alt="">
-    </marquee>
-    <h6 class="float-end mt-3">Almost 20+ Product we have</h6>
+  </marquee>
+  <div class="col-12">
+  <h4 class="float-end mt-3 text-white">Almost 20+ Product we have</h4>
+</div>
+</div>
+    
   </div>
 
   <!-- OUR PARTNER END-->
@@ -751,7 +785,7 @@ You are welcome anytime to contact us through the web form on the provided link
             <li class="mb-1"><a href="about.html" class="text-white1 fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white1 fw-lighter text-decoration-none">Portfolio</a>
             </li>
-            <li class="mb-1"><a href="AiProductSolution.html"
+            <li class="mb-1"><a href="Ai-Product-Solution.html"
                 class="text-white1 fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white1 fw-lighter text-decoration-none">Contact Us</a>
             </li>
