--- a/GrcSolution.html
+++ b/GrcSolution.html
@@ -69,7 +69,7 @@
               </a>
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
 
 
 
@@ -231,7 +231,7 @@
             Service
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+            <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
             <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
             <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             <li><a class="dropdown-item" href="EcommerceSolution.html">Ecommerce Solutions</a></li>
@@ -787,7 +787,7 @@
               <span class="navhover"></span></li>
             <li class="mb-1"><a href="about.html" class="text-white fw-lighter text-decoration-none">About Us</a></li>
             <li class="mb-1"><a href="portfolio.html" class="text-white fw-lighter text-decoration-none">Portfolio</a></li>
-            <li class="mb-1"><a href="AiProductSolution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
+            <li class="mb-1"><a href="Ai-Product-Solution.html" class="text-white fw-lighter text-decoration-none">Service</a></li>
             <li class="mb-1"><a href="contact.html" class="text-white fw-lighter text-decoration-none">Contact Us</a></li>
           </ul>
         
