--- a/getqoutes.html
+++ b/getqoutes.html
@@ -67,7 +67,7 @@
               </a>
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
-                <li><a class="dropdown-item nav-link" href="AiProductSolution.html">AiProductSolution
+                <li><a class="dropdown-item nav-link" href="Ai-Product-Solution.html">Ai Product Solution
 
 
 
@@ -208,7 +208,7 @@
               Service
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <li><a class="dropdown-item" href="AiProductSolution.html">AI Product Solution</a></li>
+              <li><a class="dropdown-item" href="Ai-Product-Solution.html">AI Product Solution</a></li>
               <li><a class="dropdown-item" href="GrcSolution.html">GRC Services</a></li>
               <li><a class="dropdown-item" href="Web-AppDevelopment.html">AI Driven  Web & App Development</a></li>
             
